@@ -1,6 +1,2 @@
-# Install m4 macros needed by other *mm packages:
-
-
-EXTRA_DIST = README config.sub missing config.guess install-sh \
-             ltmain.sh reduced.m4
+EXTRA_DIST = README reduced.m4
 
